<resources>
    <string name="app_name">Shelob</string>
    <string name="graph_tab_name">Graph</string>
    <string name="settings_tab_name">Settings</string>

    <string name="login_ubidots">Login to Ubidots</string>
    <string name="refresh_button">Refresh</string>
    <string name="api_key">Enter your api key from Ubidots</string>
    <string name="device_name">Enter device name</string>
    <string name="device_name_default">ispindel000</string>
    <string name="start_date">Select start date for all data</string>
    <string name="end_date">Select end date for all data</string>
    <string name="clear_data">Clear data</string>
    <string name="pick_start_time">Set start time</string>
    <string name="calibration">Calibration value</string>
    <string name="calibration_hint">Quick fix for uncalibrated iSpindel</string>
    <string name="battery_voltage">Battery voltage: %sV</string>

    <string name="no_api_key_set">No api key set! \nGo to settings and add your api key from Ubidots.</string>

</resources>